@@ -33,6 +33,7 @@ Version 1.5.0-svn:
      wmllint can safely do this up-conversion.
    * it's now possible to specify with loop= how many times a sample
      associated with a sound source should be played
+   * new [switch] conditional command
  * miscellaneous and bug fixes:
    * wmlxgettext now print some context information about the strings
      extracted (patch #993)
